sistemazione bottom header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="top-header">
         <div class="container">
-          <div class="item-header">Logo</div>
+          <img src="./img/logo.svg" class="logo">
           <a href="" class="item-header">link link link link link</a>
           <a href="" class="item-header">Login</a>
         </div>
@@ -18,7 +18,10 @@
       </div>
       <!-- fine top-header -->
       <div class="bottom-header">
-        <div class="banner-header"></div>
+        <div class="container"> 
+          <h1>Il tuo posto per parlare</h1>
+          <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+        </div>
       </div>
     </header>
     <main>
