Barra dei link e logo top header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <header>
       <div class="top-header">
         <div class="container">
-          <img src="./img/logo.svg" class="logo">
-          <a href="" class="item-header">link link link link link</a>
-          <a href="" class="item-header">Login</a>
+          <img src="./img/logo.svg">
+          <div class="item-group">
+            <a href="" class="item-header">Scarica</a>
+            <a href="" class="item-header">Perchè Discord</a>
+            <a href="" class="item-header">Nitro</a>
+            <a href="" class="item-header">Sicurezza</a>
+            <a href="" class="item-header">Assistenza</a>
+          </div>
+          <a href="" class="icon">accedi</a>
         </div>
         <!-- fine container -->
       </div>
