--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="" class="item-header">Sicurezza</a>
             <a href="" class="item-header">Assistenza</a>
           </div>
-          <a href="" class="icon">accedi</a>
+          <a href="" class="badge blacktxt-whitebg">Accedi</a>
         </div>
         <!-- fine container -->
       </div>
@@ -27,6 +27,10 @@
         <div class="container"> 
           <h1>Il tuo posto per parlare</h1>
           <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+        </div>
+        <div class="container"> 
+          <a href="" class="badge blacktxt-whitebg">&#8595 Scarica per Mac</a>
+          <a href="" class="badge whitetxt-blackbg">Apri Discord nel tuo browser</a>
         </div>
       </div>
     </header>
