--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </div>
       <!-- seconda sezione main -->
+      <div class="wave"> </div>
       <div class="main-section">
         <div class="container">
           <div class="item-main blue"></div>
@@ -50,6 +51,7 @@
         </div>
       </div>
       <!-- terza sezione main -->
+       
       <div class="main-section">
         <div class="container">
           <div class="item-main  pink"></div>
