--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <!-- fine top-header -->
       <div class="bottom-header">
-        <div class="container"> 
+        <div class="text-container"> 
           <h1>Il tuo posto per parlare</h1>
           <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
         </div>
@@ -38,8 +38,11 @@
       <!-- prima sezione main -->
       <div class="main-section">
         <div class="container">
-          <div class="item-main pink"></div>
-          <div class="item-main blue"></div>
+          <div class="text-container">
+            <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo. 
+          </div>
+          <div class="item-main"></div>
         </div>
       </div>
       <!-- seconda sezione main -->
