--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- prima sezione main -->
       <div class="main-section">
         <div class="container">
-          <div class="item-main"></div>
+          <img src="./img/item1.svg" class="image-container">
           <div class="text-container">
             <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
             <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo. 
@@ -46,25 +46,35 @@
         </div>
       </div>
       <!-- seconda sezione main -->
-      <div class="wave"> </div>
       <div class="main-section">
+        <div class="wave"></div>
         <div class="container">
-          <div class="item-main blue"></div>
-          <div class="item-main pink"></div>
+          <div class="text-container">
+            <h1>Dove trovarsi è facile</h1>
+            <p> Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+          </div>
+          <img src="./img/item2.svg" class="image-container">
         </div>
       </div>
       <!-- terza sezione main -->
-       
       <div class="main-section">
+        <div class="wave"></div>
         <div class="container">
-          <div class="item-main  pink"></div>
-          <div class="item-main blue"></div>
+          <img src="./img/item3.svg" class="image-container">
+          <div class="text-container">
+            <h1>Da pochi a un fandom</h1>
+            <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali crea canali privati e molto altro.</p>
+          </div>
         </div>
       </div>
       <!-- quarta sezione main -->
       <div class="main-section">
-        <div class="container"><div class="item-main green"></div>
-      </div>
+        <div class="wave"></div>
+        <h1>Dove trovarsi è facile</h1>
+            <p> Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+          <img src="./img/item2.svg" class="image-container">
+        </div>       
+       </div>
     </main>
     <footer class="footer-section">
       <div class="container">
