--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
       <!-- quarta sezione main -->
       <div class="main-section">
         <div class="wave"></div>
-        <h1>Dove trovarsi è facile</h1>
-            <p> Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
-          <img src="./img/item2.svg" class="image-container">
+          <div class="container">
+            <div class="text-container">
+              <h1>Tecnologia affidabile per tenersi in contatto</h1>
+              <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o  riunitevi in una sessione di disegno con la condivisione schemro.</p>
+            </div>
+            <img src="./img/item4-big.svg" class="image-container">
+            <h2> Pronto a iniziare la tua avventura?</h2>
         </div>       
-       </div>
     </main>
     <footer class="footer-section">
       <div class="container">
