--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       </div>
       <!-- seconda sezione main -->
       <div class="main-section">
-        <div class="wave"></div>
         <div class="container">
           <div class="text-container">
             <h1>Dove trovarsi è facile</h1>
@@ -58,7 +57,6 @@
       </div>
       <!-- terza sezione main -->
       <div class="main-section">
-        <div class="wave"></div>
         <div class="container">
           <img src="./img/item3.svg" class="image-container">
           <div class="text-container">
@@ -69,14 +67,17 @@
       </div>
       <!-- quarta sezione main -->
       <div class="main-section">
-        <div class="wave"></div>
           <div class="container">
             <div class="text-container">
               <h1>Tecnologia affidabile per tenersi in contatto</h1>
               <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o  riunitevi in una sessione di disegno con la condivisione schemro.</p>
             </div>
             <img src="./img/item4-big.svg" class="image-container">
+            <div class="container">
             <h2> Pronto a iniziare la tua avventura?</h2>
+            </div>
+            <a href="" class="badge whitetxt-bluebg">&#8595 Scarica per Mac</a>
+          </div>
         </div>       
     </main>
     <footer class="footer-section">
