--- a/index.html
+++ b/index.html
@@ -83,11 +83,44 @@
     <footer class="footer-section">
       <div class="container">
         <div class="item-footer light-red"> </div>
-        <div class="item-group cyan"> 
-          <a href="" class="item-footer">Link</a>
-          <a href="" class="item-footer">Link</a>
-          <a href="" class="item-footer">Link</a>
-          <a href="" class="item-footer">Link</a>
+        <div class="container"> 
+          <div class="item-group"> 
+            <a href="" class="item-footer">Prodotto</a>
+            <a href="" class="item-footer">Scarica</a>
+            <a href="" class="item-footer">Perchè Discord</a>
+            <a href="" class="item-footer">Nitro</a>
+            <a href="" class="item-footer">Sicurezza</a>
+            <a href="" class="item-footer">Assistenza</a>
+          </div>
+          <div class="item-group"> 
+            <a href="" class="item-footer">Compagnia</a>
+            <a href="" class="item-footer">Chi siamo</a>
+            <a href="" class="item-footer">Lavora con noi</a>
+            <a href="" class="item-footer">Marchio</a>
+            <a href="" class="item-footer">Redazione</a>
+            <a href="" class="item-footer">Negozio</a>
+          </div>
+          <div class="item-group"> 
+            <a href="" class="item-footer">Risorse</a>
+            <a href="" class="item-footer">Scarica</a>
+            <a href="" class="item-footer">Perchè Discord</a>
+            <a href="" class="item-footer">Nitro</a>
+            <a href="" class="item-footer">Sicurezza</a>
+            <a href="" class="item-footer">Assistenza</a>
+            <a href="" class="item-footer">Scarica</a>
+            <a href="" class="item-footer">Perchè Discord</a>
+            <a href="" class="item-footer">Nitro</a>
+            <a href="" class="item-footer">Sicurezza</a>
+            <a href="" class="item-footer">Assistenza</a>
+          </div>
+          <div class="item-group"> 
+            <a href="" class="item-footer">Norme</a>
+            <a href="" class="item-footer">Scarica</a>
+            <a href="" class="item-footer">Perchè Discord</a>
+            <a href="" class="item-footer">Nitro</a>
+            <a href="" class="item-footer">Sicurezza</a>
+            <a href="" class="item-footer">Assistenza</a>
+          </div>
         </div>
       </div>
       <hr>
