Fine footer . Potrebbe essere pulito parecchio il codice e mancano le waves

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         </div>
       </div>
       <hr>
-      <div class="container green">
-        <div class="item-footer brown">Logo</div>
-        <div class="item-footer brown">Bottone</div>
+        <div class="image-container">
+          <img src="./img/logo.svg">
+          <div class="badge whitetxt-bluebg">Registrati</div>
       </div>
     </footer>
   </body>
