--- a/index.html
+++ b/index.html
@@ -80,16 +80,17 @@
           </div>
         </div>       
     </main>
+    <!-- Footer -->
     <footer class="footer-section">
       <div class="container">
         <div class="container"> 
           <h1>Il tuo posto per parlare</h1>
           <p class="item-footer"><img src="https://www.flagcolorcodes.com/data/flag-of-italy.png" width="10px" height="10px"> Italiano &#9759</p>
           <div class="image-container">
-            <img src="./img/fb.png"  width="13px" height="13px">
-            <img src="./img/yt.png"  width="13px" height="13px">
-            <img src="./img/twitter.png"  width="13px" height="13px">
-            <img src="./img/insta.png"  width="13px" height="13px">
+            <img src="./img/fb.png"  width="15px" height="15px">
+            <img src="./img/yt.png"  width="15px" height="15px">
+            <img src="./img/twitter.png"  width="15px" height="15px">
+            <img src="./img/insta.png"  width="15px" height="15px">
           </div>
         </div>
         <div class="link-container"> 
