Waves aggiunte, conclusione

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
       <!-- seconda sezione main -->
       <div class="main-section">
+        <div class="wavegrey"></div>
         <div class="container">
           <div class="text-container">
             <h1>Dove trovarsi è facile</h1>
@@ -57,6 +58,7 @@
       </div>
       <!-- terza sezione main -->
       <div class="main-section">
+        <div class="wavewhite"></div>
         <div class="container">
           <img src="./img/item3.svg" class="image-container">
           <div class="text-container">
@@ -67,6 +69,7 @@
       </div>
       <!-- quarta sezione main -->
       <div class="main-section">
+        <div class="wavegrey"></div>
           <div class="container">
             <div class="text-container">
               <h1>Tecnologia affidabile per tenersi in contatto</h1>
